Update index.html with complete HTML table of data

--- a/index.html
+++ b/index.html
@@ -1,41 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Road Trip Log</title>
-</head>
-<body>
-    <h1>Road Trip Log</h1>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>miDay</th>
-                <th>miTot</th>
-                <th>Date</th>
-                <th>City</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>100</td>
-                <td>2026-02-01</td>
-                <td>City A</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>250</td>
-                <td>2026-02-02</td>
-                <td>City B</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>400</td>
-                <td>2026-02-03</td>
-                <td>City C</td>
-            </tr>
-        </tbody>
-    </table>
-</body>
-</html>
+<!DOCTYPE html>\n<html>\n<head>\n    <title>Data Table</title>\n</head>\n<body>\n    <table border=\"1\">\n        <tr>\n            <th>miDay</th>\n            <th>miTot</th>\n            <th>Date</th>\n            <th>City</th>\n        </tr>\n        <tr>\n            <td>0</td>\n            <td>0</td>\n            <td>Wed 15</td>\n            <td>Chicago IL</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Pontiac IL</td>\n        </tr>\n        <tr>\n            <td>210</td>\n            <td>210</td>\n            <td>Thu 16</td>\n            <td>Springfield IL</td>\n        </tr>\n        <tr>\n            <td>97</td>\n            <td>307</td>\n            <td>Fri 17</td>\n            <td>St Louis MO</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Jerome MO</td>\n        </tr>\n        <tr>\n            <td>215</td>\n            <td>522</td>\n            <td>Sat 18</td>\n            <td>Springfield MO</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Paris Springs MO</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Galena KS</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Claremore OK</td>\n        </tr>\n        <tr>\n            <td>180</td>\n            <td>702</td>\n            <td>Sun 19</td>\n            <td>Tulsa OK</td>\n        </tr>\n        <tr>\n            <td>100</td>\n            <td>802</td>\n            <td>Mon 20</td>\n            <td>Oklahoma City OK</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Shamrock TX</td>\n        </tr>\n        <tr>\n            <td>260</td>\n            <td>1062</td>\n            <td>Tue 21</td>\n            <td>Amarillo TX</td>\n        </tr>\n        <tr>\n            <td>111</td>\n            <td>1173</td>\n            <td>Wed 22</td>\n            <td>Tucumari NM</td>\n        </tr>\n        <tr>\n            <td>166</td>\n            <td>1339</td>\n            <td>Thu 23</td>\n            <td>Santa Fe NM</td>\n        </tr>\n        <tr>\n            <td>198</td>\n            <td>1537</td>\n            <td>Fri 24</td>\n            <td>Gallup NM</td>\n        </tr>\n        <tr>\n            <td>128</td>\n            <td>1665</td>\n            <td>Sat 25</td>\n            <td>Winslow AZ</td>\n        </tr>\n        <tr>\n            <td>118</td>\n            <td>1783</td>\n            <td>Sun 26</td>\n            <td>Valle AZ</td>\n        </tr>\n        <tr>\n            <td>161</td>\n            <td>1944</td>\n            <td>Mon 27</td>\n            <td>Kingman AZ</td>\n        </tr>\n        <tr>\n            <td>243</td>\n            <td>2187</td>\n            <td>Tue 28</td>\n            <td>Victorville CA</td>\n        </tr>\n        <tr>\n            <td>100</td>\n            <td>2287</td>\n            <td>Wed 29</td>\n            <td>Santa Monica CA</td>\n        </tr>\n    </table>\n</body>\n</html>\n
