--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-<!DOCTYPE html>\n<html>\n<head>\n    <title>Data Table</title>\n</head>\n<body>\n    <table border=\"1\">\n        <tr>\n            <th>miDay</th>\n            <th>miTot</th>\n            <th>Date</th>\n            <th>City</th>\n        </tr>\n        <tr>\n            <td>0</td>\n            <td>0</td>\n            <td>Wed 15</td>\n            <td>Chicago IL</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Pontiac IL</td>\n        </tr>\n        <tr>\n            <td>210</td>\n            <td>210</td>\n            <td>Thu 16</td>\n            <td>Springfield IL</td>\n        </tr>\n        <tr>\n            <td>97</td>\n            <td>307</td>\n            <td>Fri 17</td>\n            <td>St Louis MO</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Jerome MO</td>\n        </tr>\n        <tr>\n            <td>215</td>\n            <td>522</td>\n            <td>Sat 18</td>\n            <td>Springfield MO</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Paris Springs MO</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Galena KS</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Claremore OK</td>\n        </tr>\n        <tr>\n            <td>180</td>\n            <td>702</td>\n            <td>Sun 19</td>\n            <td>Tulsa OK</td>\n        </tr>\n        <tr>\n            <td>100</td>\n            <td>802</td>\n            <td>Mon 20</td>\n            <td>Oklahoma City OK</td>\n        </tr>\n        <tr>\n            <td></td>\n            <td></td>\n            <td></td>\n            <td>Shamrock TX</td>\n        </tr>\n        <tr>\n            <td>260</td>\n            <td>1062</td>\n            <td>Tue 21</td>\n            <td>Amarillo TX</td>\n        </tr>\n        <tr>\n            <td>111</td>\n            <td>1173</td>\n            <td>Wed 22</td>\n            <td>Tucumari NM</td>\n        </tr>\n        <tr>\n            <td>166</td>\n            <td>1339</td>\n            <td>Thu 23</td>\n            <td>Santa Fe NM</td>\n        </tr>\n        <tr>\n            <td>198</td>\n            <td>1537</td>\n            <td>Fri 24</td>\n            <td>Gallup NM</td>\n        </tr>\n        <tr>\n            <td>128</td>\n            <td>1665</td>\n            <td>Sat 25</td>\n            <td>Winslow AZ</td>\n        </tr>\n        <tr>\n            <td>118</td>\n            <td>1783</td>\n            <td>Sun 26</td>\n            <td>Valle AZ</td>\n        </tr>\n        <tr>\n            <td>161</td>\n            <td>1944</td>\n            <td>Mon 27</td>\n            <td>Kingman AZ</td>\n        </tr>\n        <tr>\n            <td>243</td>\n            <td>2187</td>\n            <td>Tue 28</td>\n            <td>Victorville CA</td>\n        </tr>\n        <tr>\n            <td>100</td>\n            <td>2287</td>\n            <td>Wed 29</td>\n            <td>Santa Monica CA</td>\n        </tr>\n    </table>\n</body>\n</html>\n
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Road Trip Data</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
+</head>
+<body>
+    <h1>Road Trip Data</h1>
+    <table>
+        <tr>
+            <th>miDay</th>
+            <th>miTot</th>
+            <th>Date</th>
+            <th>City</th>
+        </tr>
+        <tr><td>0</td><td>0</td><td>Wed 15</td><td>Chicago, IL</td></tr>
+        <tr><td></td><td></td><td></td><td>Pontiac, IL</td></tr>
+        <tr><td>210</td><td>210</td><td>Thu 16</td><td>Springfield, IL</td></tr>
+        <tr><td>97</td><td>307</td><td>Fri 17</td><td>St Louis, MO</td></tr>
+        <tr><td></td><td></td><td></td><td>Jerome, MO</td></tr>
+        <tr><td>215</td><td>522</td><td>Sat 18</td><td>Springfield, MO</td></tr>
+        <tr><td></td><td></td><td></td><td>Paris Springs, MO</td></tr>
+        <tr><td></td><td></td><td></td><td>Galena, KS</td></tr>
+        <tr><td></td><td></td><td></td><td>Claremore, OK</td></tr>
+        <tr><td>180</td><td>702</td><td>Sun 19</td><td>Tulsa, OK</td></tr>
+        <tr><td>100</td><td>802</td><td>Mon 20</td><td>Oklahoma City, OK</td></tr>
+        <tr><td></td><td></td><td></td><td>Shamrock, TX</td></tr>
+        <tr><td>260</td><td>1,062</td><td>Tue 21</td><td>Amarillo, TX</td></tr>
+        <tr><td>111</td><td>1,173</td><td>Wed 22</td><td>Tucumari, NM</td></tr>
+        <tr><td>166</td><td>1,339</td><td>Thu 23</td><td>Santa Fe, NM</td></tr>
+        <tr><td>198</td><td>1,537</td><td>Fri 24</td><td>Gallup, NM</td></tr>
+        <tr><td>128</td><td>1,665</td><td>Sat 25</td><td>Winslow, AZ</td></tr>
+        <tr><td>118</td><td>1,783</td><td>Sun 26</td><td>Valle, AZ</td></tr>
+        <tr><td>161</td><td>1,944</td><td>Mon 27</td><td>Kingman, AZ</td></tr>
+        <tr><td>243</td><td>2,187</td><td>Tue 28</td><td>Victorville, CA</td></tr>
+        <tr><td>100</td><td>2,287</td><td>Wed 29</td><td>Santa Monica, CA</td></tr>
+    </table>
+</body>
+</html>
